# rest_api_backend_impl

./: CMakeLists.txt  Colors.qml  LandingPage.qml  SignInForm.qml  SignUpForm.qml  Typography.qml  main.cpp  main.qml  rest_api_backend_impl_sw_TZ.ts  restapi.cpp  restapi.hpp  user.cpp  user.hpp
